Account for invalid accounts

--- a/views/oops.ejs
+++ b/views/oops.ejs
@@ -53,32 +53,32 @@
 </div>
 </div>
 </div>
-</nav> 
-
+</nav>
 <section>
-  <div class="infoBody dashBoard container">
-      <div class="row dash">
-          <div class="pricing-column">
-            <div class="card">      
-                    
-              <div class="card-body bg-light cardMargin">
-                <h2 class="pricing-heading">Successful <i class="fa-solid fa-thumbs-up"></i></h2><br>
-                
-                <button class="btn d-grid gap-2 btn-outline-dark dropdown" style="border:1px solid #777777;" type="button">
-                  <a href="/dashboard/<%= email %>/<%= HolderAccNo %>" class="d-flex  noTextDecor" aria-expanded="false">
-                    DashBoard
-                  </a>
-                  </button>
-
+    <div class="infoBody dashBoard container">
+        <div class="row dash">
+            <div class="pricing-column">
+              <div class="card">      
+                      
+                <div class="card-body bg-light cardMargin">
+                  <marquee behavior="scroll" direction="left" scrollamount="12"><h2 class="pricing-heading">Oops! We don't transfer too other banks yet, 
+                    we only transfer to accounts registered with our bank.</h2></marquee><br>
+                  
+                  <button class="btn d-grid gap-2 btn-outline-dark dropdown" style="border:1px solid #777777;" type="button">
+                    <a href="/dashboard/<%= email %>/<%= HolderAccNo %>" class="d-flex  noTextDecor" aria-expanded="false">
+                      Dashboard
+                    </a>
+                    </button>
+  
+                </div>
+  
+        
               </div>
-
-      
             </div>
-          </div>
-    </div>
-</section>
-
-</main>        
-<br>
-<div class="container"><p class="mt-5 mb-3 text-muted">Edidiong Obodom © 2022</p></div>
-<%- include('partials/footer') %>
+      </div>
+  </section>
+  
+  </main>        
+  <br>
+  <div class="container"><p class="mt-5 mb-3 text-muted">Edidiong Obodom © 2022</p></div>
+  <%- include('partials/footer') %>
