Account for invalid accounts one

--- a/views/oops.ejs
+++ b/views/oops.ejs
@@ -61,7 +61,7 @@
               <div class="card">      
                       
                 <div class="card-body bg-light cardMargin">
-                  <marquee behavior="scroll" direction="left" scrollamount="12"><h2 class="pricing-heading">Oops! We don't transfer too other banks yet, 
+                  <marquee behavior="scroll" direction="left" scrollamount="12"><h2 class="pricing-heading">Oops! We don't transfer to other banks yet, 
                     we only transfer to accounts registered with our bank.</h2></marquee><br>
                   
                   <button class="btn d-grid gap-2 btn-outline-dark dropdown" style="border:1px solid #777777;" type="button">
