--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,17 +1,203 @@
 <%- include('partials/header') %>
-      
- <div class="infoBody container disappearTwo">
-  <h1>Contact Us</h1>
-  <p>This beautiful functional website was made by <strong>Edidiong Obodom</strong> contact me on Whatsapp,
-      by clicking on the contact button bellow. Or you can contact me through my email at edijay17@gmail.com.
-  </p>
-  <button class="btn btn-dark btn-lg lightLord download-button" type="button">
-      <a href="https://wa.me/qr/N4M77VDYB6U6C1" style="color: antiquewhite;">Contact Me</a>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/contact.css">
+<%- include('partials/scripts') %>
+<nav class="navbar navbar-dark  fixed-top">
+  <div class="container">
+    <a class="navbar-brand edify" href="#">EDIFY I.T</a>
+    <button class="navbar-toggler bg-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+      <span class="navbar-toggler-icon"></span>
     </button>
-  
-  
-</div>     
-<br>
-<div class="container"><p class="mt-5 mb-3 text-muted">Edidiong Obodom © 2022</p></div>
+    <div class="offcanvas offcanvas-end servcol" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title servcolText" id="offcanvasDarkNavbarLabel">EDIFY I.T</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/services">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/portfolio">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/contact">Contact</a>
+          </li>
+        </ul>
+        <hr>
+        <footer id="footer">
+          <p>
+            <a 
+            rel="noreferrer"
+            target="_blank" href="https://twitter.com/edifyit1?t=TnQ6_51X-2ggKGx3tfkxSQ&s=08">
+              <span class="footerIcon">
+                <i class="fa-brands fa-twitter"></i>
+              </span>
+            </a>
+            <a 
+            rel="noreferrer"
+            target="_blank" href=" https://www.facebook.com/EdifyHD">
+              <span class="footerIcon">
+                <i class="fa-brands fa-facebook-f"></i>
+              </span>
+            </a>
+            <a 
+            rel="noreferrer"
+            target="_blank" href="https://instagram.com/edify_it">
+              <span class="footerIcon">
+                <i class="fa-brands fa-instagram"></i>
+              </span>
+            </a>
+            <a 
+            rel="noreferrer"
+            target="_blank" href="mailto:edifyit1@gmail.com?subject=Contacting%20Edify%20IT&body=Good%20day%20Ediy%20IT.">
+              <span class="footerIcon">
+                <i class="fa-solid fa-envelope"></i>
+              </span>
+            </a>
+          </p>
+          <p>©2022 Copyright Edify I.T</strong></p>
+          </footer>
+      </div>
+    </div>
+  </div>
+</nav>
+    </div>
+    <div style="padding-bottom: 4%;">
+        <div class="contactInfo container">
+            <h1>Contact Me</h1>
+             <div style="padding-top: 2%;">
+                <a 
+                style="margin-left: 2%;"
+                class="btn btn-primary"
+                rel="noreferrer"
+                target="_blank" href="tel:+2348129245801">
+                  <span class="footerIcon">
+                    <i class="fa-solid fa-phone" style=" font-size: 20px;"></i>
+                  </span>
+                </a>
+                <a 
+                style="margin-left: 2%;"
+                class="btn btn-warning"
+                rel="noreferrer"
+                target="_blank" href="mailto:edifyit1@gmail.com?subject=Contacting%20Edify%20IT&body=Good%20day%20Ediy%20IT.">
+                  <span class="footerIcon">
+                    <i class="fa-solid fa-envelope" style=" font-size: 20px;"></i>
+                  </span>
+                </a>
+            <a 
+                style="margin-left: 2%;"
+                class="btn btn-light"
+                rel="noreferrer"
+                target="_blank" href=" https://www.facebook.com/EdifyHD">
+                  <span class="footerIcon">
+                    <i class="fa-brands fa-facebook-f" style="color: blue; font-size: 20px;"></i>
+                  </span>
+                </a>
+            
+                 <a 
+                    style="margin-left: 2%;"
+                    class="btn btn-success"
+                    rel="noreferrer"
+                    target="_blank" href="mailto:edifyit1@gmail.com?subject=Contacting%20Edify%20IT&body=Good%20day%20Ediy%20IT.">
+                      <span class="footerIcon">
+                        <i class="fa-brands fa-whatsapp" style=" font-size: 20px;"></i>
+                      </span>
+                    </a>
+    
+            <a 
+                style="margin-left: 2%;"
+                class="btn btn-light"
+                rel="noreferrer"
+                target="_blank" href="https://instagram.com/edify_it">
+                  <span class="footerIcon">
+                    <i class="fa-brands fa-instagram" style="color: red; font-size: 20px;"></i>
+                  </span>
+                </a>
+             </div>
+            
+        </div>
+        <br>
+        <div style="text-align: center;">
+            <h3>Or</h3>
+        </div>
+        <br>
+        <div>
+        <div style="text-align: center; margin-bottom: 2%;"><h3>Fill This Form</h3></div>
+        <div class="wrapper">
+            
+            <form action="/message" method="post">
+              <div class="field capitalize">
+                <input type="text" id="name" name="name" placeholder="Who are you?" maxlength="50" required autocomplete="off"/>
+                <label for="name">Name</label>
+              </div>
+              <div class="field">
+                <input type="email" id="email" name="email" maxlength="50" autocomplete="off" required placeholder="name@domain.tld" />
+                <label for="email">E-Mail</label>
+              </div>
+              <div class="field">
+                <textarea id="msg" rows="4" name="msg" autocomplete="off" maxlength="200"
+                 required placeholder="Your message..."></textarea>
+                <label for="msg">Your Message</label>
+                <div id="the-count">
+                    <span id="current">0</span>
+                    <span id="maximum">/ 200</span>
+                  </div>
+              </div>
+              <input class="button" type="submit"/>
+            </form>
+          
+          </div>
+        </div>
 
-<%- include('partials/footer') %>
+        
+    </div>
+
+    <script>
+        $('textarea').keyup(function() {
+    
+    var characterCount = $(this).val().length,
+        current = $('#current'),
+        maximum = $('#maximum'),
+        theCount = $('#the-count');
+      
+    current.text(characterCount);
+   
+    
+    /*This isn't entirely necessary, just playin around*/
+    if (characterCount < 70) {
+      current.css('color', '#fff');
+    }
+    if (characterCount > 70 && characterCount < 90) {
+      current.css('color', 'yellow');
+    }
+    if (characterCount > 90 && characterCount < 100) {
+      current.css('color', 'orange');
+    }
+    if (characterCount > 100 && characterCount < 120) {
+      current.css('color', '#841c1c');
+    }
+    if (characterCount > 120 && characterCount < 139) {
+      current.css('color', '#8f0001');
+    }
+    
+    if (characterCount >= 200) {
+      maximum.css('color', 'red');
+      current.css('color', 'red');
+      theCount.css('font-weight','bold');
+    } else {
+      maximum.css('color','#666');
+      theCount.css('font-weight','normal');
+    }
+    
+        
+  });
+    </script>
+    <%- include('partials/footer') %>
