--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,17 +1,150 @@
-<%- include('partials/header') %> 
+<%- include('partials/header') %>
+    <link rel="stylesheet" href="css/index.css">
+	<!-- parallax -->
+	<link rel="stylesheet" href="css/parallax.css">
+<%- include('partials/scripts') %>
+	
 
-<div class="infoBody container disappearTwo">
-  <h1>Banking Made Easy</h1>
-  <p>Swift and Easy Transactions, Outstanding Customer <br class="disappear">Service and many more...</p><br class="poof">
-  <button class="btn btn-dark btn-lg lightLord download-button" type="button">
-      <a href="/auth/register">Register</a>
-    </button>
-    <button class="btn btn btn-outline-light btn-lg lightLord download-button" type="button">
-      <a href="/login">Log In</a>
-    </button>
+	
+<%- include('partials/nav') %>
+	<div class="paral">
+			<section class="background" style="text-align: center;">
+			  <div class="content-wrapper">
+				<p class="content-title1">EDIFY I.T</p>
+				<p class="content-subtitle weight typewrite"></p>
+			  </div>
+			  <i class="fa-sharp fa-solid fa-caret-down whitee sixty"></i>
+			</section>
+			<section class="background" id="services">
+			  <div class="content-wrapper">
+
+				<!-- sorcery begins -->
+				<div class="sorcery">
+					<div class="app">
+			
+						<div class="eddy">
+							<div class="cardiList">
+							<button class="cardiList__btn btns btns--left">
+								<div class="icon">
+									<i class="fa-solid fa-chevron-left thirtyTwo"></i>
+								</div>
+							</button>
+					
+							<div class="cardis__wrapper">
+								<div class="cardi current--card">
+									<div class="cardi__image">
+										<img src="https://aitechnologiesng.com/wp-content/uploads/2020/10/Website-Development.jpeg" alt="" />
+									</div>
+								</div>
+					
+								<div class="cardi next--card">
+									<div class="cardi__image">
+										<img src="https://www.wordstream.com/wp-content/uploads/2022/08/what-does-seo-stand-for.png" alt="" />
+									</div>
+								</div>
+					
+								<div class="cardi previous--card">
+									<div class="cardi__image">
+										<img src="https://img.freepik.com/free-vector/gradient-ui-ux-background_23-2149052117.jpg?w=2000" alt="" />
+									</div>
+								</div>
+							</div>
+					
+							<button class="cardiList__btn btns btns--right">
+								<div class="icon">
+									<i class="fa-solid fa-chevron-right thirtyTwo"></i>
+								</div>
+							</button>
+						</div>
+					
+						<div class="infoList">
+							<div class="info__wrapper">
+								<div class="info current--info">
+									<h1 class="text name">Web Dev</h1>
+								</div>
+					
+								<div class="info next--info">
+									<h1 class="text name">SEO</h1>
+								</div>
+					
+								<div class="info previous--info">
+									<h1 class="text name">UI/UX</h1>
+								</div>
+							</div>
+						</div>
+						</div>
+					
+					
+						<div class="app__bg">
+							<div class="app__bg__image current--image">
+								<img src="https://aitechnologiesng.com/wp-content/uploads/2020/10/Website-Development.jpeg" alt="" />
+							</div>
+							<div class="app__bg__image next--image">
+								<img src="https://www.wordstream.com/wp-content/uploads/2022/08/what-does-seo-stand-for.png" alt="" />
+							</div>
+							<div class="app__bg__image previous--image">
+								<img src="https://img.freepik.com/free-vector/gradient-ui-ux-background_23-2149052117.jpg?w=2000" alt="" />
+							</div>
+						</div>
+					</div>
+                </div>
+			
+		
+		
+		<div class="support">
+			<a href="https://twitter.com/edifyit1?t=TnQ6_51X-2ggKGx3tfkxSQ&s=08" target="_blank">
+				<i class="fa-brands fa-twitter"></i></a>
+			<a 
+      rel="noreferrer"
+      target="_blank" href=" https://www.facebook.com/EdifyHD">
+        <span class="footerIcon">
+          <i class="fa-brands fa-facebook-f"></i>
+        </span>
+      </a>
+	  <a 
+      rel="noreferrer"
+      target="_blank" href="https://instagram.com/edify_it">
+        <span class="footerIcon">
+          <i class="fa-brands fa-instagram"></i>
+        </span>
+      </a>
+	  <a 
+      rel="noreferrer"
+      target="_blank" href="mailto:edifyit1@gmail.com?subject=Contacting%20Edify%20IT&body=Good%20day%20Ediy%20IT.">
+        <span class="footerIcon">
+          <i class="fa-solid fa-envelope"></i>
+        </span>
+      </a>
+		</div>
+	
+			  </div>
+		  </section>
+	
+	</div>
+    <!-- loader -->
+	<!-- <div class="row" id="loading">
+		<div class="canvas col"></div>
+	  </div> -->
   
-</div>
-<br>
-<div class="container"><p class="mt-5 mb-3 text-muted">Edidiong Obodom © 2022</p></div>
-
-<%- include('partials/footer') %> 
+		
+    <!-- <script>
+  $(window).load(function() {
+    $('#loading').hide();
+  }); -->
+</script>
+    <script src="JScript/index.js"></script>
+	<script src="JScript/parallax.js"></script>
+	<script src="JScript/typewrite.js"></script>
+	<script src="JScript/about.js"></script>
+  <script src="JScript/test.js"></script>
+	<!-- Bootstrap5 poopper -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" 
+    integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" 
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" 
+    integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" 
+    crossorigin="anonymous"></script>
+	<!-- Fontawesome -->
+<script src="https://kit.fontawesome.com/3157f9417c.js" crossorigin="anonymous"></script>
+</body>
+</html>
