--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,41 +1,51 @@
+<footer id="footer">
+  <p>
+    <a 
+    rel="noreferrer"
+    target="_blank" href="https://twitter.com/edifyit1?t=TnQ6_51X-2ggKGx3tfkxSQ&s=08">
+      <span class="footerIcon">
+        <i class="fa-brands fa-twitter"></i>
+      </span>
+    </a>
+    <a 
+    rel="noreferrer"
+    target="_blank" href=" https://www.facebook.com/EdifyHD">
+      <span class="footerIcon">
+        <i class="fa-brands fa-facebook-f"></i>
+      </span>
+    </a>
+    <a 
+    rel="noreferrer"
+    target="_blank" href="https://instagram.com/edify_it">
+      <span class="footerIcon">
+        <i class="fa-brands fa-instagram"></i>
+      </span>
+    </a>
+    <a 
+    rel="noreferrer"
+    target="_blank" href="mailto:edifyit1@gmail.com?subject=Contacting%20Edify%20IT&body=Good%20day%20Ediy%20IT.">
+      <span class="footerIcon">
+        <i class="fa-solid fa-envelope"></i>
+      </span>
+    </a>
+  </p>
+  <p>©2022 Copyright Edify I.T</p>
+
+</footer>
+<script src="JScript/index.js"></script>
+	<script src="JScript/parallax.js"></script>
+	<script src="JScript/typewrite.js"></script>
+	<script src="JScript/about.js"></script>
+  <script src="JScript/test.js"></script>
+  <script src="JScript/message.js"></script>
+	<!-- Bootstrap5 poopper -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" 
+    integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" 
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" 
+    integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" 
+    crossorigin="anonymous"></script>
+    <!-- Fontawesome -->
 <script src="https://kit.fontawesome.com/3157f9417c.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" 
-    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" 
-    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    <!-- Let's include CDN files -->
-
-  <!-- 0. JQuery Cdn -->
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" 
-  integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" 
-  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-  <!-- 1. Owl Carousel Min .js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" 
-  integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" 
-  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-  <!-- Init Owl Carousel -->
-
-  <script>
-	  $('.owl-carousel').owlCarousel({
-		loop:false,
-		margin:30,
-		nav:false,
-		responsive:{
-	  0:{
-		  items:1
-	  },
-	  600:{
-		  items:2
-	  },
-	  1000:{
-		  items:4
-	  }
-  }
-  })
-  </script>
-  <script src="/JScript/index.js"></script>
 </body>
 </html>
