--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,50 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Vault</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/styles.css">
+    <meta
+      name="description"
+      content="Edify I.T or Edify IT is a web design company that uses modern technologies to create responsive, scalable and unique websites, EdifyIT is the peak of technology."
+    />
+	<link rel="icon" href="images/edify.jpg" />
+    <title>Edify IT - Web Development and Web Design Services</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     
-      <!-- Fontawesome -->
-  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" 
-  	integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" 
-  	crossorigin="anonymous" referrerpolicy="no-referrer" />
-  
-    <!--1. Owl Carousel Min .css -->
-  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" 
-  	integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" 
-  	crossorigin="anonymous" referrerpolicy="no-referrer" />
-  
-  	<!--2. Owl Carousel Theme Min .css -->
-  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" 
-  	integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" 
-  	crossorigin="anonymous" referrerpolicy="no-referrer" />
-      <link rel="icon" href="images/wallet.jpg">
-</head>
-<body>
-    
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-          <a class="navbar-brand comeDown" href="#"><p class="navbar-brand"><i class="fa-solid colorCool fa-wallet"></i>
-            <i class="fa-solid colorCool fa-money-bill-transfer">TheVault</i></p></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2  pad">
-              <li class="nav-item">
-                <a class="nav-link active spacing" aria-current="page" href="/">HOME</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active spacing" aria-current="page" href="/about">ABOUT US</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active spacing" aria-current="page" href="/contact">CONTACT US</a>
-              </li>
-              
-            </ul>
-            
-          </div>
-        </div>
-      </nav>
